--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 
-body, button
-{
+body,
+button {
     font-family: 'Open Sans', sans-serif;
 }
 
-body, html
-{
-    background: #2ecc71;
+body,
+html {
+    background: #000;
     border: 0px;
     padding: 0px;
     margin: 0px;
 }
 
-#content
-{
+#content {
     margin: 0px auto;
     padding: 15px;
     padding-top: 0px;
@@ -27,13 +26,11 @@ body, html
     text-align: center;
 }
 
-#edit
-{
+#edit {
     box-sizing: border-box;
 }
 
-#header
-{
+#header {
     margin: 0px auto;
     margin-bottom: 25px;
     width: 100%;
@@ -43,19 +40,16 @@ body, html
     box-sizing: border-box;
 }
 
-#preview
-{
+#preview {
     width: 100%;
 }
 
 
-#upload
-{
+#upload {
     margin-top: 100px;
 }
 
-button
-{
+button {
     border: 0px solid black;
     background: #cb4e4e;
     color: white;
@@ -68,27 +62,23 @@ button
     padding: 20px 80px;
 }
 
-button:hover
-{
+button:hover {
     margin-top: 4px;
     box-shadow: 0 12px #ab3c3c;
     margin-bottom: 12px;
 }
 
-button:active
-{
+button:active {
     margin-top: 16px;
     box-shadow: 0 0px #ab3c3c;
     margin-bottom: 0px;
 }
 
-button.full
-{
+button.full {
     width: 100%;
 }
 
-#footer
-{
+#footer {
     padding: 20px 40px;
     font-size: 12px;
     color: #FFF;
@@ -96,18 +86,15 @@ button.full
     margin-top: 50px;
 }
 
-@media(max-width: 700px)
-{
-    button
-    {
+@media(max-width: 700px) {
+    button {
         width: 100%;
         font-size: 1em;
         padding-left: 5px;
         padding-right: 5px;
     }
 
-    #footer
-    {
+    #footer {
         padding: 20px 20px;
     }
 }
